--- a/tests/index.html
+++ b/tests/index.html
@@ -18,16 +18,23 @@
   {{content-for "test-head-footer"}}
 </head>
 <body>
-{{content-for "body"}}
-{{content-for "test-body"}}
+  {{content-for "body"}}
+  {{content-for "test-body"}}
 
-<script src="/testem.js" integrity=""></script>
-<script src="{{rootURL}}assets/vendor.js"></script>
-<script src="{{rootURL}}assets/test-support.js"></script>
-<script src="{{rootURL}}assets/lti-course-manager.js"></script>
-<script src="{{rootURL}}assets/tests.js"></script>
+  <div id="qunit"></div>
+  <div id="qunit-fixture">
+    <div id="ember-testing-container">
+      <div id="ember-testing"></div>
+    </div>
+  </div>
 
-{{content-for "body-footer"}}
-{{content-for "test-body-footer"}}
+  <script src="/testem.js" integrity=""></script>
+  <script src="{{rootURL}}assets/vendor.js"></script>
+  <script src="{{rootURL}}assets/test-support.js"></script>
+  <script src="{{rootURL}}assets/lti-course-manager.js"></script>
+  <script src="{{rootURL}}assets/tests.js"></script>
+
+  {{content-for "body-footer"}}
+  {{content-for "test-body-footer"}}
 </body>
 </html>
